disable click blinking on iOS Safari

--- a/src/app/home/play-episode/play-episode.less
+++ b/src/app/home/play-episode/play-episode.less
@@ -8,6 +8,7 @@
   align-items: stretch;
   width: 100%;
   background-color: #000;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 .episode-info-container {
   margin-top: 2rem;
