--- a/src/app/home/bangumi-detail/bangumi-detail.html
+++ b/src/app/home/bangumi-detail/bangumi-detail.html
@@ -10,7 +10,7 @@
         </div>
         <div class="bangumi-cover-revealer" [style.height]="coverRevealerHeight" (click)="toggleCover()">
         </div>
-        <div #bangumiInfo class="bangumi-base-info">
+        <div class="bangumi-base-info">
             <h2 class="bangumi-title name-cn">
                 {{bangumi.name_cn}}
                 <a class="external-link" [href]="'https://bgm.tv/subject/' + bangumi.bgm_id" target="_blank"
