--- a/src/app/home/play-episode/play-episode.less
+++ b/src/app/home/play-episode/play-episode.less
@@ -50,6 +50,13 @@
           font-size: 1em;
           color: #696969;
         }
+
+        .external-link {
+          display: inline-block;
+          margin-left: 1.5rem;
+          font-size: 0.8em;
+          color: #818181;
+        }
       }
 
       .summary {
