--- a/src/app/home/home.html
+++ b/src/app/home/home.html
@@ -54,4 +54,10 @@
 <footer id="page-footer" [ngClass]="currentRouteName + (sidebarActive === 'active' ? ' sidebar-active': '')" *ngIf="currentRouteName !== 'Bangumi'">
     <div class="copyright-content">&copy;2016 - 2017 Nyasoft, All rights reserved.</div>
     <div class="credits">Powered By <a target="_blank" href="https://github.com/lordfriend/Albireo">Albireo</a></div>
+    <div class="ui horizontal bulleted link list">
+        <a href="" class="item">Terms and Conditions</a>
+        <a href="" class="item">Privacy Policy</a>
+        <a href="" class="item">Contact Us</a>
+        <a href="" class="item">Apps</a>
+    </div>
 </footer>
