--- a/src/app/home/home.less
+++ b/src/app/home/home.less
@@ -1,4 +1,6 @@
 @navbarHeight: 3.5rem;
+@footerHeight: 8em;
+
 :host {
   display: block;
   height: 100%;
@@ -117,7 +119,7 @@
 
 .home-content {
   min-height: 100%;
-  padding-bottom: 7em;
+  padding-bottom: 2em + @footerHeight;
 
   &.Default.sidebar-active,
   &.Bangumi.sidebar-active,
@@ -136,8 +138,8 @@
 
 #page-footer {
   width: 100%;
-  margin-top: -5em;
-  height: 5em;
+  margin-top: -@footerHeight;
+  height: @footerHeight;
   background-color: #fff;
   border-top: 1px solid #ccc;
   display: flex;
@@ -160,12 +162,12 @@
       padding-left: 0;
     }
 
-    .credits, .copyright-content {
+    .credits, .copyright-content, .ui.link.list {
       margin-left: 0;
     }
   }
 
-  .credits, .copyright-content {
+  .credits, .copyright-content, .ui.link.list {
     margin-left: 2rem;
   }
 }
