add routes, links for static-content

--- a/src/app/static-content/privacy/privacy.html
+++ b/src/app/static-content/privacy/privacy.html
@@ -1,3 +1,31 @@
 <div class="privacy-content">
-
+    <h1 class="ui header">我们收集与存储的信息</h1>
+    <ol>
+        <li>
+            当你访问Web版客户端时，我们使用Google Analytics收集必要的信息用于统计用户使用状况，这些信息由Google收集与储存，本站并不直接存储这些信息。
+            所有的这些信息都是匿名的，我们不会将帐号信息提供给Google。
+        </li>
+        <li>
+            为了更好的提供服务，本站保存了您的用户名，密码，邮箱地址。其中密码经过加盐hash加密存储的，确保任何人（包括我们）不会知道泄露您的原始密码。
+            此外本站还会自动保存您的观看记录和进度。
+        </li>
+        <li>
+            所有这些信息收集政策都尽显Web客户端，如果您使用的是第三方客户端，您需要检查第三方客户端的信息收集政策。
+        </li>
+    </ol>
+    <h1 class="ui header">我们分享的信息</h1>
+    <ol>
+        <li>
+            我们仅使用Google Analytics收集匿名信息，但我们并不会与Google分享任何您的帐号相关信息。
+        </li>
+        <li>
+            当您使用第三方客户端时，请检查第三方客户端的隐私政策来了解第三方客户端是否会与其他机构或个人分享信息。
+        </li>
+    </ol>
+    <h1 class="ui header">政策的变化</h1>
+    <ol>
+        <li>
+            我们的隐私政策可能会随时变化，当隐私政策发生变化时，我们会尽可能通知您，但您依然有义务随时检查隐私政策。只要您继续使用我们的服务即意味着您接受我们的隐私政策。
+        </li>
+    </ol>
 </div>
