--- a/src/app/static-content/tos/tos.html
+++ b/src/app/static-content/tos/tos.html
@@ -56,5 +56,5 @@
         </li>
     </ol>
     <h2 class="ui header">免责声明</h2>
-    <p>您同意使用我们的服务并自行承担所产生的风险。我们不对您因为使用不我们的服务而触犯所在国或管辖区的法律而负有责任。本站不对内容的正确性和时效性负有责任和义务。</p>
+    <p>您同意使用我们的服务并自行承担所产生的风险。我们不对您因为使用我们的服务而触犯所在国或管辖区的法律而负有责任。本站不对内容的正确性和时效性负有责任和义务。</p>
 </div>
