add apps page detail (not finished), rename contact to developers

--- a/src/app/home/home.html
+++ b/src/app/home/home.html
@@ -57,7 +57,7 @@
     <div class="ui horizontal bulleted link list">
         <a routerLink="/about/tos" class="item">Terms and Conditions</a>
         <a routerLink="/about/privacy" class="item">Privacy Policy</a>
-        <a routerLink="/about/contact" class="item">Contact Us</a>
+        <a routerLink="/about/developers" class="item">Developers</a>
         <a routerLink="/about/apps" class="item">Apps</a>
     </div>
 </footer>
