--- a/src/app/static-content/apps/apps.html
+++ b/src/app/static-content/apps/apps.html
@@ -1,3 +1,6 @@
 <div class="apps-guide">
-
+    <h1 class="ui header">Android移动客户端</h1>
+    <p>
+        <a href="https://play.google.com/store/apps/details?id=com.sqrtf.megumin">Megumin</a>
+    </p>
 </div>
