use the new image object to determine request image size

--- a/src/app/admin/bangumi-detail/bangumi-detail.html
+++ b/src/app/admin/bangumi-detail/bangumi-detail.html
@@ -12,9 +12,13 @@
     <div class="bangumi-basic-info">
         <div class="cover-wrapper">
             <responsive-image
-                [src]="bangumi.cover"
-                [size]="{width: '100%', height: 'auto'}"
-                [background]="bangumi.cover_color"></responsive-image>
+                [src]="bangumi.cover_image?.url"
+                [size]="{
+                    width: '100%',
+                    height: 'auto',
+                    originalWidth: bangumi.cover_image?.width,
+                    originalHeight: bangumi.cover_image?.height}"
+                [background]="bangumi.cover_image?.dominant_color"></responsive-image>
         </div>
         <div class="bangumi-info-text">
             <h3 class="bangumi-title">
@@ -122,7 +126,7 @@
                     [ngClass]="{downloaded: episode.status === 2, downloading: episode.status === 1}">
                     <td>{{episode.episode_no}}</td>
                     <td>
-                        <div class="image-wrapper" *ngIf="episode.status !== 2">
+                        <div class="image-wrapper" *ngIf="episode.status !== 2 || !episode.thumbnail_image">
                             <div class="image-fallback">
                                 <h4 class="ui icon film icon-holder">
                                     <i class="film icon"></i>
@@ -130,10 +134,14 @@
                             </div>
                         </div>
                         <responsive-image
-                            [src]="episode.thumbnail"
-                            [size]="{width: '6rem', height: '3.375rem'}"
-                            display="table" *ngIf="episode.status === 2"
-                            [background]="episode.thumbnail_color"></responsive-image>
+                            [src]="episode.thumbnail_image.url"
+                            [size]="{
+                                width: '6rem',
+                                height: '3.375rem',
+                                originalWidth: episode.thumbnail_image.width,
+                                originalHeight: episode.thumbnail_image.height}"
+                            display="table" *ngIf="episode.status === 2 && !!episode.thumbnail_image"
+                            [background]="episode.thumbnail_image.dominant_color"></responsive-image>
                     </td>
                     <td class="title">
                         <span class="key">日文:</span><span class="value">{{episode.name}}</span> <br>
