--- a/src/app/home/default/default.html
+++ b/src/app/home/default/default.html
@@ -10,8 +10,12 @@
         <div class="card bangumi-card" *ngFor="let bangumi of onAirBangumi">
             <a class="image" [routerLink]="['/bangumi', bangumi.id]">
                 <responsive-image [src]="bangumi.cover"
-                                  [size]="{width: '100%', ratio: 1.405152224824}"
-                                  [background]="bangumi.cover_color"></responsive-image>
+                                  [size]="{
+                                    width: '100%',
+                                    ratio: 1.405152224824,
+                                    originalWidth: bangumi.cover_image.width,
+                                    originalHeight: bangumi.cover_image.height}"
+                                  [background]="bangumi.cover_image"></responsive-image>
             </a>
             <div *ngIf="bangumi.favorite_status" class="ui ribbon label"
                  [ngClass]="{
