--- a/src/app/home/play-episode/play-episode.html
+++ b/src/app/home/play-episode/play-episode.html
@@ -21,9 +21,13 @@
 </div>
 <div class="bangumi-info">
     <div class="bangumi-cover">
-        <responsive-image [src]="episode.bangumi.cover"
-                          [size]="{width: '100%', height: 'auto'}"
-                          [background]="episode.bangumi.cover_color"></responsive-image>
+        <responsive-image [src]="episode.bangumi.cover_image.url"
+                          [size]="{
+                            width: '100%',
+                            height: 'auto',
+                            originalWidth: episode.bangumi.cover_image.width,
+                            originalHeight: episode.bangumi.cover_image.height}"
+                          [background]="episode.bangumi.cover_image.dominant_color"></responsive-image>
     </div>
     <div class="bangumi-basic-info">
         <h2 class="bangumi-title name-cn">
