add a temporary solution for banner in default page. this will change in the future. Add a temporary solution for management announcement like banner in admin panel. this will change in the future.

--- a/src/app/admin/admin.html
+++ b/src/app/admin/admin.html
@@ -12,6 +12,9 @@
         <a class="item" [routerLink]="['/admin/task']">
             任务管理
         </a>
+        <a class="item" [routerLink]="['/admin/announce']">
+            公告管理
+        </a>
     </aside>
     <router-outlet></router-outlet>
 </div>
