--- a/src/app/home/default/default.html
+++ b/src/app/home/default/default.html
@@ -1,4 +1,9 @@
 <div class="ui container default-container">
+    <div class="announce-container" *ngIf="announce_in_banner">
+        <a class="announcement" [href]="announce_in_banner.url" target="_blank">
+            <img [src]="announce_in_banner.image_url" alt="">
+        </a>
+    </div>
     <div class="ui fluid two item secondary pointing menu">
         <a class="item" [ngClass]="{active: bangumiType === 2}" (click)="changeBangumiType(2)">动画</a>
         <a class="item" [ngClass]="{active: bangumiType === 6}" (click)="changeBangumiType(6)">日剧</a>
