--- a/src/app/home/default/default.less
+++ b/src/app/home/default/default.less
@@ -29,3 +29,22 @@
     }
   }
 }
+
+.announce-container {
+  padding: 0 0.2rem;
+  .announcement {
+    display: block;
+    position: relative;
+    width: 100%;
+    height: 0;
+    padding-bottom: 20.43%;
+    > img {
+      display: block;
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+    }
+  }
+}
