adjust table layout of announce

--- a/src/app/admin/announce/announce.html
+++ b/src/app/admin/announce/announce.html
@@ -6,12 +6,12 @@
         <table class="ui very basic table">
             <thead>
             <tr>
-                <th>顺序</th>
+                <th style="width: 3rem;">顺序</th>
                 <th>开始时间</th>
                 <th>结束时间</th>
-                <th>URL</th>
-                <th>图片</th>
-                <td>操作</td>
+                <th style="max-width: 40%;">URL</th>
+                <th style="max-width: 30%;">图片</th>
+                <th style="width: 6rem;">操作</th>
             </tr>
             </thead>
             <tbody>
