--- a/src/app/admin/announce/announce.less
+++ b/src/app/admin/announce/announce.less
@@ -10,6 +10,15 @@
   background-color: #f0f0f0;
 }
 
+.table {
+  td {
+    overflow: hidden;
+    white-space: normal;
+    -ms-word-break: break-all;
+    word-break: break-all;
+  }
+}
+
 .anchor-button {
   display: inline-block;
   margin: 0 0.2rem;
