--- a/src/app/home/bangumi-card/bangumi-card.less
+++ b/src/app/home/bangumi-card/bangumi-card.less
@@ -15,6 +15,11 @@
   }
 }
 
+a.ui.segment {
+  display: block;
+  color: #383838;
+}
+
 .bangumi-list-item {
   position: relative;
   padding-left: @image-width;
