--- a/src/app/home/bangumi-list/bangumi-list.html
+++ b/src/app/home/bangumi-list/bangumi-list.html
@@ -1,10 +1,10 @@
 <div class="bangumi-list-container" *ngIf="!name && !isLoading">
-    <div class="filter-container">
+    <div class="filter-container" (click)="onClickFilterContainer()">
         <div class="ui container">
-            <a class="sort-button anchor-button" (click)="onOrderChange()" [title]="sort === 'desc' ? '降序': '升序'">
+            <a class="sort-button anchor-button" (click)="onOrderChange($event)" [title]="sort === 'desc' ? '降序': '升序'">
                 <i class="sort content icon" [ngClass]="{ascending: sort === 'asc', descending: sort === 'desc'}"></i>
             </a>
-            <div class="ui inline dropdown" uiDropdown="click">
+            <div class="ui inline dropdown" uiDropdown="click" [stopPropagation]="true">
                 <div class="text">{{typeMenuLabel[type]}}</div>
                 <i class="dropdown icon"></i>
                 <div class="menu">
@@ -17,7 +17,7 @@
     </div>
     <div class="timeline-container">
         <ui-timeline-meter [rowHeight]="cardHeight" [timestampList]="timestampList">
-            <infinite-list [rowHeight]="cardHeight">
+            <infinite-list [rowHeight]="cardHeight" [newScrollPosition]="lastScrollPosition" (scrollPosition)="onScrollPositionChange($event)">
                 <bangumi-card *infiniteFor="let bangumi of bangumiList" [bangumi]="bangumi"></bangumi-card>
             </infinite-list>
         </ui-timeline-meter>
