--- a/src/app/admin/admin.html
+++ b/src/app/admin/admin.html
@@ -15,6 +15,9 @@
         <a class="item" [routerLink]="['/admin/announce']">
             公告管理
         </a>
+        <a class="item" [routerLink]="['/admin/web-hook']" *ngIf="user?.level >= 3">
+            Web Hook管理
+        </a>
     </aside>
     <router-outlet></router-outlet>
 </div>
