add delete ability in both admin and user center

--- a/src/app/admin/web-hook/edit-web-hook/edit-web-hook.less
+++ b/src/app/admin/web-hook/edit-web-hook/edit-web-hook.less
@@ -67,13 +67,16 @@
   }
 }
 
-.edit-web-hook-from {
+.content-area {
   position: relative;
   width: 100%;
   height: 100%;
   overflow-x: hidden;
   overflow-y: auto;
   padding: 1.5rem 1.5rem 6rem 1.5rem;
+  > .ui.horizontal.divider {
+    color: #9d7951;
+  }
 }
 
 
