--- a/src/app/home/user-center/user-center.less
+++ b/src/app/home/user-center/user-center.less
@@ -48,3 +48,14 @@
     }
   }
 }
+
+.web-hook-list {
+  .name {
+    font-size: 1.2rem;
+    padding: 0.4rem 1rem;
+  }
+  .desc {
+    margin-top: 1rem;
+    color: #4c4c4c;
+  }
+}
