--- a/src/app/admin/web-hook/edit-web-hook/edit-web-hook.html
+++ b/src/app/admin/web-hook/edit-web-hook/edit-web-hook.html
@@ -34,6 +34,15 @@
                 <li *ngFor="let error of webHookFormErrors.url">{{error}}</li>
             </ul>
         </div>
+        <div class="field" [ngClass]="{error: webHookFormErrors.shared_secret.length > 0}">
+            <label>Shared Secret</label>
+            <input type="text" placeholder="输入任意内容，最少5个字符" formControlName="shared_secret" name="shared_secret">
+        </div>
+        <div class="ui error message" *ngIf="webHookFormErrors.shared_secret.length > 0">
+            <ul class="list">
+                <li *ngFor="let error of webHookFormErrors.shared_secret">{{error}}</li>
+            </ul>
+        </div>
         <div class="field">
             <label>状态（状态修改仅用于调试）</label>
             <select name="status" formControlName="status">
