--- a/src/app/home/web-hook/web-hook.less
+++ b/src/app/home/web-hook/web-hook.less
@@ -10,7 +10,8 @@
   overflow-x: hidden;
   overflow-y: auto;
 }
-.user-center-container {
+
+.web-hook-list-container {
   width: 700px;
   padding-top: 2rem;
   padding-bottom: 3rem;
@@ -25,28 +26,6 @@
     width: 700px;
   }
 
-  .ui.form {
-    .inline.field {
-      > label {
-        width: 8em;
-        text-align: right;
-      }
-      .warning.text {
-        display: inline-block;
-        margin-left: 1em;
-        color: #573a08;
-      }
-      > .ui.button {
-        margin-left: 1em;
-      }
-    }
-    .ui.button {
-      margin-left: 8em;
-    }
-    .inline.field + .ui.error.message {
-      margin-left: 8.4em;
-    }
-  }
 }
 
 
@@ -68,8 +47,4 @@
       padding-right: 1rem;
     }
   }
-}
-
-.action-row {
-  margin-top: 2rem;
 }
